Fix nicklist toggle: hide nicklist/chstats on collapse, restore on expand, fix closed button position

--- a/styles/gateway_def.css
+++ b/styles/gateway_def.css
@@ -700,6 +700,7 @@ span.notice, span.notice-nick {
 #nicklist-closed {
 	display: none;
 	flex: 1 1 auto;
+	position: relative;
 }
 
 div.close {
